--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "vite": "^7.0.7"
     },
     "dependencies": {
-        "bootstrap": "^5.3.8"
+        "@fontsource/inter": "^5.2.8",
+        "bootstrap": "^5.3.0",
+        "bootstrap-icons": "^1.13.1"
     }
 }
